Fixed wordlist scrollbar, edited scrollbar design

--- a/wordle-solver/src/App.css
+++ b/wordle-solver/src/App.css
@@ -50,8 +50,8 @@
 
 .container {
   display: flex;
-  align-items: center; /* Align elements to the right horizontally */
-  justify-content: center; /* Center elements vertically */
+  align-items: center; 
+  justify-content: center; 
   height: 48vh;
   margin-top: 6vh;
   margin-bottom: 6vh;
@@ -62,7 +62,13 @@
   position: absolute;
   right: 0;
   top: 0;
+  display: flex;
+  flex-direction: column;
   width: 12vw;
+  max-height: 100%;
+}
+
+.list-group {
   max-height: 100%;
   overflow-y: auto;
 }
@@ -71,6 +77,40 @@
   background-color: black;
   color: white;
   border-color: var(--select-grey);
+}
+
+/* Custom scrollbar for WebKit-based browsers */
+.list-group::-webkit-scrollbar {
+  width: 12px; /* Width of the entire scrollbar */
+}
+
+.list-group::-webkit-scrollbar-track {
+  background: #1f1f1f; /* Color of the track */
+  border-radius: 2px; /* Roundness of the track */
+}
+
+.list-group::-webkit-scrollbar-thumb {
+  background-color: #aaaaaa; /* Color of the thumb */
+  border-radius: 4px; /* Roundness of the thumb */
+  border: 2px solid #1f1f1f; /* Padding around the thumb */
+}
+
+.list-group::-webkit-scrollbar-thumb:hover {
+  background-color: #727272; /* Color of the thumb when hovered */
+}
+
+.default-list-item {
+  cursor:unset;
+  user-select: none;
+}
+
+.word-item {
+  cursor: pointer;
+  user-select: none;
+}
+
+.word-list-header {
+  color: white;
 }
 
 .main-grid {
@@ -145,14 +185,4 @@
   background-color: var(--key-grey);
   user-select: none;
   cursor: pointer;
-}
-
-.default-list-item {
-  cursor:unset;
-  user-select: none;
-}
-
-.word-item {
-  cursor: pointer;
-  user-select: none;
 }
